java/java-tests/testData/codeInsight/daemonCodeAnalyzer/genericsHighlighting8/IDEA57265.java
class A<T> {
  class B<S> {
    <error descr="Improper formed type; some type parameters are missing">A<T>.B</error> x;
  }
}
